net: phy: realtek: clear 1000Base-T link partner advertisement (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -849,6 +849,7 @@
 	patches.suse/neighbour-Use-rtnl_register_many.patch
 	patches.suse/net-phy-realtek-read-duplex-and-gbit-master-from-PHY.patch
 	patches.suse/net-phy-realtek-change-order-of-calls-in-C22-read_st.patch
+	patches.suse/net-phy-realtek-clear-1000Base-T-link-partner-advert.patch
 	patches.suse/ethtool-rss-prevent-rss-ctx-deletion-when-in-use.patch
 	patches.suse/net-phy-realtek-merge-the-drivers-for-internal-NBase.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
