--- a/series.conf
+++ b/series.conf
@@ -848,6 +848,7 @@
 	patches.suse/gve-add-support-for-basic-queue-stats.patch
 	patches.suse/neighbour-Use-rtnl_register_many.patch
 	patches.suse/net-phy-realtek-read-duplex-and-gbit-master-from-PHY.patch
+	patches.suse/net-phy-realtek-change-order-of-calls-in-C22-read_st.patch
 	patches.suse/ethtool-rss-prevent-rss-ctx-deletion-when-in-use.patch
 	patches.suse/net-phy-realtek-merge-the-drivers-for-internal-NBase.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
