--- a/series.conf
+++ b/series.conf
@@ -7336,6 +7336,7 @@
 	patches.suse/r8169-add-support-for-Intel-Killer-E5000.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
 	patches.suse/r8169-add-PHY-c45-ops-for-MDIO_MMD_VENDOR2-registers.patch
+	patches.suse/net-phy-realtek-improve-mmd-register-access-for-inte.patch
 	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/bnxt_en-Set-NPAR-1.2-support-when-registering-with-f.patch
 	patches.suse/bnxt_en-Refactor-completion-ring-allocation-logic-fo.patch
