--- a/series.conf
+++ b/series.conf
@@ -4607,6 +4607,7 @@
 	patches.suse/netfilter-nf_tables-fix-set-size-with-rbtree-backend.patch
 	patches.suse/netfilter-nft_flow_offload-update-tcp-state-flags-under-lo.patch
 	patches.suse/net-phy-realtek-clear-1000Base-T-lpa-if-link-is-down.patch
+	patches.suse/net-phy-realtek-clear-master_slave_state-if-link-is-.patch
 	patches.suse/net-let-net.core.dev_weight-always-be-non-zero.patch
 	patches.suse/net-avoid-race-between-device-unregistration-and-eth.patch
 	patches.suse/net-sched-Disallow-replacing-of-child-qdisc-from-one.patch
