- net: phy: move realtek PHY driver to its own subdirectory   (jsc#PED-14353). - Refresh   patches.suse/net-phy-realtek-always-clear-NBase-T-lpa.patch. - Refresh   patches.suse/net-phy-realtek-clear-1000Base-T-lpa-if-link-is-down.patch. - Refresh   patches.suse/net-phy-realtek-clear-master_slave_state-if-link-is-.patch.

--- a/series.conf
+++ b/series.conf
@@ -4464,6 +4464,7 @@
 	patches.suse/net-mlx5-Add-support-for-MRTCQ-register.patch
 	patches.suse/net-mlx5-SHAMPO-Introduce-new-SHAMPO-specific-HCA-ca.patch
 	patches.suse/net-mlx5-Add-nic_cap_reg-and-vhca_icm_ctrl-registers.patch
+	patches.suse/net-phy-move-realtek-PHY-driver-to-its-own-subdirect.patch
 	patches.suse/net-stmmac-imx-Use-syscon_regmap_lookup_by_phandle_args.patch
 	patches.suse/net-ethtool-add-hds_config-member-in-ethtool_netdev_.patch
 	patches.suse/net-ethtool-add-support-for-configuring-hds-thresh.patch
