net: phy: realtek: add defines for shadowed c45 standard registers (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -7353,6 +7353,7 @@
 	patches.suse/libeth-move-idpf_rx_csum_decoded-and-idpf_rx_extract.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-wo.patch
 	patches.suse/net-phy-realtek-add-helper-RTL822X_VND2_C22_REG.patch
+	patches.suse/net-phy-realtek-add-defines-for-shadowed-c45-standar.patch
 	patches.suse/msft-hv-3195-net-mana-Allow-tso_max_size-to-go-up-to-GSO_MAX_SIZE.patch
 	patches.suse/msft-hv-3196-hv_netvsc-Use-VF-s-tso_max_size-value-when-data-path.patch
 	patches.suse/msft-hv-3197-net-mana-Add-debug-logs-in-MANA-network-driver.patch
