r8169: avoid duplicated messages if loading firmware fails and switch to warn level (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49172,6 +49172,7 @@
 	patches.suse/gve-adopt-page-pool-for-DQ-RDA-mode.patch
 	patches.suse/gve-add-support-for-basic-queue-stats.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
+	patches.suse/r8169-avoid-duplicated-messages-if-loading-firmware-.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
 	patches.suse/net-mlx5-Introduce-node-type-to-rate-group-structure.patch
