r8169: remove original workaround for RTL8125 broken rx issue (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49151,6 +49151,7 @@
 	patches.suse/virtchnl-support-queue-rate-limit-and-quanta-size-co.patch
 	patches.suse/ice-Support-VF-queue-rate-limit-and-quanta-size-conf.patch
 	patches.suse/r8169-don-t-apply-UDP-padding-quirk-on-RTL8126A.patch
+	patches.suse/r8169-remove-original-workaround-for-RTL8125-broken-.patch
 	patches.suse/tg3-Link-IRQs-to-NAPI-instances.patch
 	patches.suse/tg3-Link-queues-to-NAPIs.patch
 	patches.suse/tcp-move-sysctl_tcp_l3mdev_accept-to-netns_ipv4_read.patch
