r8169: don't apply UDP padding quirk on RTL8126A (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49150,6 +49150,7 @@
 	patches.suse/net-mlx5-Add-support-check-for-TSAR-types-in-QoS-sch.patch
 	patches.suse/virtchnl-support-queue-rate-limit-and-quanta-size-co.patch
 	patches.suse/ice-Support-VF-queue-rate-limit-and-quanta-size-conf.patch
+	patches.suse/r8169-don-t-apply-UDP-padding-quirk-on-RTL8126A.patch
 	patches.suse/tg3-Link-IRQs-to-NAPI-instances.patch
 	patches.suse/tg3-Link-queues-to-NAPIs.patch
 	patches.suse/tcp-move-sysctl_tcp_l3mdev_accept-to-netns_ipv4_read.patch
