r8169: enable EEE at 2.5G per default on RTL8125B (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49174,6 +49174,7 @@
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
 	patches.suse/r8169-avoid-duplicated-messages-if-loading-firmware-.patch
 	patches.suse/r8169-remove-rtl_dash_loop_wait_high-low.patch
+	patches.suse/r8169-enable-EEE-at-2.5G-per-default-on-RTL8125B.patch
 	patches.suse/eth-Fix-typo-accelaration-.-exprienced-and-rewrittin.patch
 	patches.suse/net-mlx5-Refactor-QoS-group-scheduling-element-creat.patch
 	patches.suse/net-mlx5-Introduce-node-type-to-rate-group-structure.patch
