r8169: improve RTL8411b phy-down fixup (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -22445,6 +22445,7 @@
 	patches.suse/net-mlx5-Query-maximum-frequency-adjustment-of-the-P.patch
 	patches.suse/net-mlx5e-Add-local-loopback-counter-to-vport-rep-st.patch
 	patches.suse/net-mlx5e-Remove-early-assignment-to-netdev-features.patch
+	patches.suse/r8169-improve-RTL8411b-phy-down-fixup.patch
 	patches.suse/net-sched-cls_u32-replace-int-refcounts-with-proper-refcounts.patch
 	patches.suse/igc-Simplify-setting-flags-in-the-TX-data-descriptor.patch
 	patches.suse/igc-Add-support-for-PTP-.getcyclesx64.patch
