Revert "net: r8169: Disable multicast filter for RTL8168H and RTL8107E" (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -20797,6 +20797,7 @@
 	patches.suse/dpll-Fix-potential-msg-memleak-when-genlmsg_put_repl.patch
 	patches.suse/nfc-virtual_ncidev-Add-variable-to-check-if-ndev-is-.patch
 	patches.suse/net-smc-avoid-data-corruption-caused-by-decline.patch
+	patches.suse/Revert-net-r8169-Disable-multicast-filter-for-RTL816.patch
 	patches.suse/net-usb-qmi_wwan-claim-interface-4-for-ZTE-MF290.patch
 	patches.suse/octeontx2-pf-Fix-ntuple-rule-creation-to-direct-pack.patch
 	patches.suse/net-veth-fix-ethtool-stats-reporting.patch
