r8169: improve handling task scheduling (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -22593,6 +22593,7 @@
 	patches.suse/tools-ynl-make-sure-we-use-local-headers-for-page-po.patch
 	patches.suse/tools-ynl-order-building-samples-after-generated-cod.patch
 	patches.suse/tools-ynl-don-t-skip-regeneration-from-make-targets.patch
+	patches.suse/r8169-improve-handling-task-scheduling.patch
 	patches.suse/net-dsa-sja1105-Use-units.h-instead-of-the-copy-of-a.patch
 	patches.suse/msft-hv-2923-net-mana-Fix-spelling-mistake-enforecement-enforceme.patch
 	patches.suse/devlink-warn-about-existing-entities-during-reload-r.patch
