- r8169: use dev_err_probe in all appropriate places in   rtl_init_one() (jsc#PED-14353). - Refresh   patches.suse/r8169-revert-2ab19de62d67-r8169-remove-ASPM-res.patch.

--- a/series.conf
+++ b/series.conf
@@ -1483,6 +1483,7 @@
 	patches.suse/chelsio-Support-MSG_SPLICE_PAGES.patch
 	patches.suse/chelsio-Convert-chtls_sendpage-to-use-MSG_SPLICE_PAG.patch
 	patches.suse/devlink-bring-port-new-reply-back.patch
+	patches.suse/r8169-use-dev_err_probe-in-all-appropriate-places-in.patch
 	patches.suse/tls-suppress-wakeups-unless-we-have-a-full-record.patch
 	patches.suse/tools-ynl-gen-add-extra-headers-for-user-space.patch
 	patches.suse/tools-ynl-gen-fix-unused-pad-attribute-handling.patch
