--- a/series.conf
+++ b/series.conf
@@ -20324,6 +20324,7 @@
 	patches.suse/net-ethtool-Fix-documentation-of-ethtool_sprintf.patch
 	patches.suse/net-page_pool-add-missing-free_percpu-when-page_pool.patch
 	patches.suse/net-smc-fix-documentation-of-buffer-sizes.patch
+	patches.suse/net-r8169-Disable-multicast-filter-for-RTL8168H-and-.patch
 	patches.suse/Fix-termination-state-for-idr_for_each_entry_ul.patch
 	patches.suse/net-stmmac-xgmac-Enable-support-for-multiple-Flexibl.patch
 	patches.suse/selftests-pmtu.sh-fix-result-checking.patch
