--- a/series.conf
+++ b/series.conf
@@ -22575,6 +22575,7 @@
 	patches.suse/net-page_pool-mute-the-periodic-warning-for-visible-.patch
 	patches.suse/tools-ynl-add-sample-for-getting-page-pool-informati.patch
 	patches.suse/ice-fix-error-code-in-ice_eswitch_attach.patch
+	patches.suse/r8169-remove-multicast-filter-limit.patch
 	patches.suse/i40e-Delete-unused-and-useless-i40e_pf-fields.patch
 	patches.suse/i40e-Remove-AQ-register-definitions-for-VF-types.patch
 	patches.suse/i40e-Remove-queue-tracking-fields-from-i40e_adminq_r.patch
