r8169: support setting the EEE tx idle timer on RTL8168h (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -29233,6 +29233,7 @@
 	patches.suse/r8169-simplify-code-by-using-core-provided-pcpu-stat.patch
 	patches.suse/net-add-netdev_lockdep_set_classes-to-virtual-driver.patch
 	patches.suse/r8169-add-generic-rtl_set_eee_txidle_timer-function.patch
+	patches.suse/r8169-support-setting-the-EEE-tx-idle-timer-on-RTL81.patch
 	patches.suse/net-dsa-realtek-fix-digital-interface-select-macro-f.patch
 	patches.suse/net-add-generic-percpu-page_pool-allocator.patch
 	patches.suse/xdp-rely-on-skb-pointer-reference-in-do_xdp_generic-.patch
