- r8169: simplify EEE handling (jsc#PED-14353). - Refresh   patches.suse/r8169-implement-additional-ethtool-stats-ops.patch.

--- a/series.conf
+++ b/series.conf
@@ -29139,6 +29139,7 @@
 	patches.suse/net-sched-Load-modules-via-their-alias.patch
 	patches.suse/net-sched-Remove-alias-of-sch_clsact.patch
 	patches.suse/net-phy-realtek-add-support-for-RTL8126A-integrated-.patch
+	patches.suse/r8169-simplify-EEE-handling.patch
 	patches.suse/tools-ynl-include-dpll-and-mptcp_pm-in-C-codegen.patch
 	patches.suse/tools-ynl-generate-code-for-ovs-families.patch
 	patches.suse/tools-ynl-auto-gen-for-all-genetlink-families.patch
