r8169: simplify code by using core-provided pcpu stats allocation (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -29230,6 +29230,7 @@
 	patches.suse/net-dsa-realtek-embed-dsa_switch-into-realtek_priv.patch
 	patches.suse/tg3-fix-bug-caused-by-uninitialized-variable.patch
 	patches.suse/net-mlx5e-link-NAPI-instances-to-queues-and-IRQs.patch
+	patches.suse/r8169-simplify-code-by-using-core-provided-pcpu-stat.patch
 	patches.suse/net-add-netdev_lockdep_set_classes-to-virtual-driver.patch
 	patches.suse/net-dsa-realtek-fix-digital-interface-select-macro-f.patch
 	patches.suse/net-add-generic-percpu-page_pool-allocator.patch
