r8169: add MODULE_FIRMWARE entry for RTL8126A (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -29278,6 +29278,7 @@
 	patches.suse/net-introduce-abstraction-for-network-memory.patch
 	patches.suse/net-add-netmem-to-skb_frag_t.patch
 	patches.suse/net-fix-pointer-check-in-skb_pp_cow_data-routine.patch
+	patches.suse/r8169-add-MODULE_FIRMWARE-entry-for-RTL8126A.patch
 	patches.suse/net-dsa-constify-the-struct-device_type-usage.patch
 	patches.suse/tg3-copy-only-needed-fields-from-userspace-provided-.patch
 	patches.suse/tg3-simplify-tg3_phy_autoneg_cfg.patch
