r8169: remove detection of chip version 11 (early RTL8168b) (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -39629,6 +39629,7 @@
 	patches.suse/selftests-bpf-Fix-prog-numbers-in-test_sockmap.patch
 	patches.suse/bpf-net-Use-DEV_STAT_INC.patch
 	patches.suse/r8169-disable-interrupt-source-RxOverflow.patch
+	patches.suse/r8169-remove-detection-of-chip-version-11-early-RTL8.patch
 	patches.suse/tcp-add-tcp_done_with_error-helper.patch
 	patches.suse/tcp-fix-race-in-tcp_write_err.patch
 	patches.suse/tcp-fix-races-in-tcp_abort.patch
