--- a/series.conf
+++ b/series.conf
@@ -37681,6 +37681,7 @@
 	patches.suse/IB-qib-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_LEGACY.patch
 	patches.suse/RDMA-vmw_pvrdma-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_.patch
 	patches.suse/net-atlantic-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_LEG.patch
+	patches.suse/r8169-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_LEGACY.patch
 	patches.suse/scsi-hpsa-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_LEGACY.patch
 	patches.suse/scsi-megaraid_sas-Use-PCI_IRQ_INTX-instead-of-PCI_IR.patch
 	patches.suse/scsi-mpt3sas-Use-PCI_IRQ_INTX-instead-of-PCI_IRQ_LEG.patch
