r8169: add support for RTL8168M (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -34865,6 +34865,7 @@
 	patches.suse/ipv4-Set-scope-explicitly-in-ip_route_output.patch
 	patches.suse/devlink-Support-setting-max_io_eqs.patch
 	patches.suse/mlx5-core-Support-max_io_eqs-for-a-function.patch
+	patches.suse/r8169-add-support-for-RTL8168M.patch
 	patches.suse/e1000e-Remove-redundant-runtime-resume-for-ethtool_o.patch
 	patches.suse/igb-Remove-redundant-runtime-resume-for-ethtool_ops.patch
 	patches.suse/igc-Remove-redundant-runtime-resume-for-ethtool-ops.patch
