Revert "r8169: don't try to disable interrupts if NAPI is, scheduled already" (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -38236,6 +38236,7 @@
 	patches.suse/ipv6-sr-fix-missing-sk_buff-release-in-seg6_input_co.patch
 	patches.suse/selftests-net-kill-smcrouted-in-the-cleanup-logic-in.patch
 	patches.suse/nfc-nci-Fix-uninit-value-in-nci_rx_work.patch
+	patches.suse/Revert-r8169-don-t-try-to-disable-interrupts-if-NAPI.patch
 	patches.suse/af_unix-Update-unix_sk-sk-oob_skb-under-sk_receive_queue-lock.patch
 	patches.suse/ipv6-sr-fix-memleak-in-seg6_hmac_init_algo.patch
 	patches.suse/selftests-net-use-tc-rule-to-filter-the-na-packet.patch
