--- a/series.conf
+++ b/series.conf
@@ -39628,6 +39628,7 @@
 	patches.suse/bpftool-Un-const-bpf_func_info-to-fix-it-for-llvm-17.patch
 	patches.suse/selftests-bpf-Fix-prog-numbers-in-test_sockmap.patch
 	patches.suse/bpf-net-Use-DEV_STAT_INC.patch
+	patches.suse/r8169-disable-interrupt-source-RxOverflow.patch
 	patches.suse/tcp-add-tcp_done_with_error-helper.patch
 	patches.suse/tcp-fix-race-in-tcp_write_err.patch
 	patches.suse/tcp-fix-races-in-tcp_abort.patch
