--- a/series.conf
+++ b/series.conf
@@ -47638,6 +47638,7 @@
 	patches.suse/net-ipv6-select-DST_CACHE-from-IPV6_RPL_LWTUNNEL.patch
 	patches.suse/tcp-check-skb-is-non-NULL-in-tcp_rto_delta_us.patch
 	patches.suse/r8169-add-tally-counter-fields-added-with-RTL8125.patch
+	patches.suse/r8169-add-missing-MODULE_FIRMWARE-entry-for-RTL8126A.patch
 	patches.suse/bonding-Fix-unnecessary-warnings-and-logs-from-bond_.patch
 	patches.suse/usbnet-fix-cyclical-race-on-disconnect-with-work-que.patch
 	patches.suse/efistub-tpm-Use-ACPI-reclaim-memory-for-event-log-to.patch
