r8169: don't increment tx_dropped in case of NETDEV_TX_BUSY (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -43954,6 +43954,7 @@
 	patches.suse/ice-improve-updating-ice_-t-r-x_ring-xsk_pool.patch
 	patches.suse/ice-add-missing-WRITE_ONCE-when-clearing-ice_rx_ring.patch
 	patches.suse/ice-xsk-fix-txq-interrupt-mapping.patch
+	patches.suse/r8169-don-t-increment-tx_dropped-in-case-of-NETDEV_T.patch
 	patches.suse/net-mlx5-Always-drain-health-in-shutdown-callback.patch
 	patches.suse/net-mlx5-Fix-error-handling-in-irq_pool_request_irq.patch
 	patches.suse/net-mlx5-DR-Fix-stack-guard-page-was-hit-error-in-dr.patch
