r8169: avoid unsolicited interrupts (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -48385,6 +48385,7 @@
 	patches.suse/net-sched-act_api-deny-mismatched-skip_sw-skip_hw-flags-for-actions-created-by-classifiers.patch
 	patches.suse/net-sched-fix-use-after-free-in-taprio_change.patch
 	patches.suse/net-sched-use-RCU-read-side-critical-section-in-taprio_dump.patch
+	patches.suse/r8169-avoid-unsolicited-interrupts.patch
 	patches.suse/posix-clock-posix-clock-Fix-unbalanced-locking-in-pc.patch
 	patches.suse/xfrm-validate-new-SA-s-prefixlen-using-SA-family-whe.patch
 	patches.suse/xfrm-fix-one-more-kernel-infoleak-in-algo-dumping.patch
