r8169: add support for the temperature sensor being available from RTL8125B (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49145,6 +49145,7 @@
 	patches.suse/sfc-add-per-queue-RX-bytes-stats.patch
 	patches.suse/vmxnet3-support-higher-link-speeds-from-vmxnet3-v9.patch
 	patches.suse/idpf-Don-t-hard-code-napi_struct-size.patch
+	patches.suse/r8169-add-support-for-the-temperature-sensor-being-a.patch
 	patches.suse/msft-hv-3077-net-mana-Enable-debugfs-files-for-MANA-device.patch
 	patches.suse/net_sched-sch_sfq-handle-bigger-packets.patch
 	patches.suse/ice-Implement-ethtool-reset-support.patch
