r8169: don't take RTNL lock in rtl_task() (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49198,6 +49198,7 @@
 	patches.suse/gve-adopt-page-pool-for-DQ-RDA-mode.patch
 	patches.suse/gve-add-support-for-basic-queue-stats.patch
 	patches.suse/tg3-Increase-buffer-size-for-IRQ-label.patch
+	patches.suse/r8169-don-t-take-RTNL-lock-in-rtl_task.patch
 	patches.suse/r8169-avoid-duplicated-messages-if-loading-firmware-.patch
 	patches.suse/r8169-remove-rtl_dash_loop_wait_high-low.patch
 	patches.suse/r8169-enable-EEE-at-2.5G-per-default-on-RTL8125B.patch
