r8169: add support for RTL8126A rev.b (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -44932,6 +44932,7 @@
 	patches.suse/octeontx2-af-use-dynamic-interrupt-vectors-for-CN10K.patch
 	patches.suse/octeontx2-af-avoid-RXC-register-access-for-CN10KB.patch
 	patches.suse/octeontx2-af-configure-default-CPT-credits-for-CN10K.patch
+	patches.suse/r8169-add-support-for-RTL8126A-rev.b.patch
 	patches.suse/can-j1939-use-correct-function-name-in-comment.patch
 	patches.suse/can-netlink-avoid-call-to-do_set_data_bittiming-call.patch
 	patches.suse/ioam6-improve-checks-on-user-data.patch
