- r8169: Fix spelling mistake: "tx_underun" -> "tx_underrun"   (jsc#PED-14353). - Refresh   patches.suse/r8169-add-tally-counter-fields-added-with-RTL8125.patch.

--- a/series.conf
+++ b/series.conf
@@ -45052,6 +45052,7 @@
 	patches.suse/ionic-Fully-reconfigure-queues-when-going-to-from-a-.patch
 	patches.suse/ionic-convert-Rx-queue-buffers-to-use-page_pool.patch
 	patches.suse/ionic-Allow-XDP-program-to-be-hot-swapped.patch
+	patches.suse/r8169-Fix-spelling-mistake-tx_underun-tx_underrun.patch
 	patches.suse/bnxt_en-Increase-the-number-of-MSIX-vectors-for-RoCE.patch
 	patches.suse/bnxt_en-Add-MSIX-check-in-bnxt_check_rings.patch
 	patches.suse/bnxt_en-resize-bnxt_irq-name-field-to-fit-format-str.patch
