r8169: improve rtl_set_d3_pll_down (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49290,6 +49290,7 @@
 	patches.suse/net-sfc-use-ethtool-string-helpers.patch
 	patches.suse/msft-hv-3081-hv_sock-Initializing-vsk-trans-to-NULL-to-prevent-a-.patch
 	patches.suse/r8169-improve-__rtl8169_set_wol.patch
+	patches.suse/r8169-improve-rtl_set_d3_pll_down.patch
 	patches.suse/mlx5-core-Schedule-EQ-comp-tasklet-only-if-necessary.patch
 	patches.suse/mlx5-core-relax-memory-barrier-in-eq_update_ci.patch
 	patches.suse/mlx5-core-deduplicate-mlx5_-eq_update_ci.patch
