--- a/series.conf
+++ b/series.conf
@@ -49291,6 +49291,7 @@
 	patches.suse/msft-hv-3081-hv_sock-Initializing-vsk-trans-to-NULL-to-prevent-a-.patch
 	patches.suse/r8169-improve-__rtl8169_set_wol.patch
 	patches.suse/r8169-improve-rtl_set_d3_pll_down.patch
+	patches.suse/r8169-align-WAKE_PHY-handling-with-r8125-r8126-vendo.patch
 	patches.suse/mlx5-core-Schedule-EQ-comp-tasklet-only-if-necessary.patch
 	patches.suse/mlx5-core-relax-memory-barrier-in-eq_update_ci.patch
 	patches.suse/mlx5-core-deduplicate-mlx5_-eq_update_ci.patch
