--- a/series.conf
+++ b/series.conf
@@ -49236,6 +49236,7 @@
 	patches.suse/mlx5-fix-typo-in-mlx5_cqwq_get_cqe_enahnced_comp.patch
 	patches.suse/mlx5-simplify-EQ-interrupt-polling-logic.patch
 	patches.suse/net-qlogic-use-ethtool-string-helpers.patch
+	patches.suse/r8169-add-support-for-RTL8125D.patch
 	patches.suse/devlink-introduce-devlink_nl_put_u64.patch
 	patches.suse/wifi-p54-Use-IRQF_NO_AUTOEN-flag-in-request_irq.patch
 	patches.suse/wifi-mwifiex-Use-IRQF_NO_AUTOEN-flag-in-request_irq.patch
