r8169: improve initialization of RSS registers on RTL8125/RTL8126 (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49280,6 +49280,7 @@
 	patches.suse/sfc-Remove-unused-efx_mae_mport_vf.patch
 	patches.suse/sfc-Remove-unused-mcdi-functions.patch
 	patches.suse/sfc-Remove-more-unused-functions.patch
+	patches.suse/r8169-improve-initialization-of-RSS-registers-on-RTL.patch
 	patches.suse/ipv6-release-nexthop-on-device-removal.patch
 	patches.suse/bnxt_en-ethtool-Remove-ip4-ip6-ntuple-support-for-IP.patch
 	patches.suse/bnxt_en-ethtool-Support-unset-l4proto-on-ip4-ip6-ntu.patch
