--- a/series.conf
+++ b/series.conf
@@ -49289,6 +49289,7 @@
 	patches.suse/bonding-add-ESP-offload-features-when-slaves-support.patch
 	patches.suse/net-sfc-use-ethtool-string-helpers.patch
 	patches.suse/msft-hv-3081-hv_sock-Initializing-vsk-trans-to-NULL-to-prevent-a-.patch
+	patches.suse/r8169-improve-__rtl8169_set_wol.patch
 	patches.suse/mlx5-core-Schedule-EQ-comp-tasklet-only-if-necessary.patch
 	patches.suse/mlx5-core-relax-memory-barrier-in-eq_update_ci.patch
 	patches.suse/mlx5-core-deduplicate-mlx5_-eq_update_ci.patch
