r8169: use helper r8169_mod_reg8_cond to simplify rtl_jumbo_config (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -49300,6 +49300,7 @@
 	patches.suse/ipv6-Fix-soft-lockups-in-fib6_select_path-under-high-next-hop-churn.patch
 	patches.suse/bnxt_en-use-irq_update_affinity_hint.patch
 	patches.suse/net-atlantic-use-irq_update_affinity_hint.patch
+	patches.suse/r8169-use-helper-r8169_mod_reg8_cond-to-simplify-rtl.patch
 	patches.suse/bnxt_en-add-unlocked-version-of-bnxt_refclk_read.patch
 	patches.suse/net-mlx5-E-switch-refactor-eswitch-mode-change.patch
 	patches.suse/net-mlx5-Simplify-QoS-normalization-by-removing-erro.patch
