r8169: add support for RTL8125BP rev.b (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -51042,6 +51042,7 @@
 	patches.suse/ixgbevf-Remove-unused-ixgbevf_hv_mbx_ops.patch
 	patches.suse/ixgbe-Fix-passing-0-to-ERR_PTR-in-ixgbe_run_xdp.patch
 	patches.suse/ixgbevf-Fix-passing-0-to-ERR_PTR-in-ixgbevf_run_xdp.patch
+	patches.suse/r8169-add-support-for-RTL8125BP-rev.b.patch
 	patches.suse/net-wwan-iosm-Fix-hibernation-by-re-binding-the-driv.patch
 	patches.suse/msft-hv-3157-hv_netvsc-Replace-one-element-array-with-flexible-ar.patch
 	patches.suse/wifi-wlcore-fix-unbalanced-pm_runtime-calls.patch
