r8169: remove redundant hwmon support (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -50752,6 +50752,7 @@
 	patches.suse/net-mana-Cleanup-mana-debugfs-dir-after-cleanup-of-a.patch
 	patches.suse/openvswitch-fix-lockup-on-tx-to-unregistering-netdev.patch
 	patches.suse/pktgen-Avoid-out-of-bounds-access-in-get_imix_entrie.patch
+	patches.suse/r8169-remove-redundant-hwmon-support.patch
 	patches.suse/gtp-Use-for_each_netdev_rcu-in-gtp_genl_dump_pdp.patch
 	patches.suse/gtp-Destroy-device-along-with-udp-socket-s-netns-dis.patch
 	patches.suse/pfcp-Destroy-device-along-with-udp-socket-s-netns-di.patch
