--- a/series.conf
+++ b/series.conf
@@ -50983,6 +50983,7 @@
 	patches.suse/ima-Suspend-PCR-extends-and-log-appends-when-rebooti.patch
 	patches.suse/selinux-Fix-SCTP-error-inconsistency-in-selinux_sock.patch
 	patches.suse/r8169-remove-unused-flag-RTL_FLAG_TASK_RESET_NO_QUEU.patch
+	patches.suse/r8169-remove-support-for-chip-version-11.patch
 	patches.suse/include-net-add-static-inline-dst_dev_overhead-to-dst.h.patch
 	patches.suse/net-ipv6-ioam6_iptunnel-mitigate-2-realloc-issue.patch
 	patches.suse/net-ipv6-seg6_iptunnel-mitigate-2-realloc-issue.patch
