r8169: adjust version numbering for RTL8126 (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -50992,6 +50992,7 @@
 	patches.suse/rxrpc-Fix-handling-of-received-connection-abort.patch
 	patches.suse/net-usb-lan78xx-Add-error-handling-to-lan78xx_init_m.patch
 	patches.suse/net-smc-support-ipv4-mapped-ipv6-addr-client-for-smc-r-v2.patch
+	patches.suse/r8169-adjust-version-numbering-for-RTL8126.patch
 	patches.suse/inetpeer-remove-create-argument-of-inet_getpeer_v-46.patch
 	patches.suse/inetpeer-update-inetpeer-timestamp-in-inet_getpeer.patch
 	patches.suse/ptr_ring-do-not-block-hard-interrupts-in-ptr_ring_re.patch
