--- a/series.conf
+++ b/series.conf
@@ -52511,6 +52511,7 @@
 	patches.suse/ice-init-flow-director-before-RDMA.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
+	patches.suse/r8169-add-support-for-Intel-Killer-E5000.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
 	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
