r8169: don't scan PHY addresses > 0 (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -52499,6 +52499,7 @@
 	patches.suse/iommu-vt-d-Fix-system-hang-on-reboot-f.patch
 	patches.suse/iommu-vt-d-Fix-possible-circular-locking-dependency.patch
 	patches.suse/coredump-Fixes-core_pipe_limit-sysctl-proc_handler.patch
+	patches.suse/r8169-don-t-scan-PHY-addresses-0.patch
 	patches.suse/ice-count-combined-queues-using-Rx-Tx-count.patch
 	patches.suse/ice-devlink-PF-MSI-X-max-and-min-parameter.patch
 	patches.suse/ice-remove-splitting-MSI-X-between-features.patch
