r8169: add PHY c45 ops for MDIO_MMD_VENDOR2 registers (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -52513,6 +52513,7 @@
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/r8169-add-support-for-Intel-Killer-E5000.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
+	patches.suse/r8169-add-PHY-c45-ops-for-MDIO_MMD_VENDOR2-registers.patch
 	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
 	patches.suse/net-mana-Allow-tso_max_size-to-go-up-to-GSO_MAX_SIZE.patch
