r8169: enable RTL8168H/RTL8168EP/RTL8168FP ASPM support (jsc#PED-14353).

--- a/series.conf
+++ b/series.conf
@@ -52545,6 +52545,7 @@
 	patches.suse/broadcom-fix-supported-flag-check-in-periodic-output.patch
 	patches.suse/ptp-ocp-reject-unsupported-periodic-output-flags.patch
 	patches.suse/net-vlan-don-t-propagate-flags-on-open.patch
+	patches.suse/r8169-enable-RTL8168H-RTL8168EP-RTL8168FP-ASPM-suppo.patch
 	patches.suse/wifi-ath11k-Fix-DMA-buffer-allocation-to-resolve-SWI.patch
 	patches.suse/wifi-ath11k-Use-dma_alloc_noncoherent-for-rx_tid-buf.patch
 	patches.suse/wifi-ath12k-fix-skb_ext_desc-leak-in-ath12k_dp_tx-er.patch
