--- a/series.conf
+++ b/series.conf
@@ -52538,6 +52538,7 @@
 	patches.suse/wifi-rtw88-Fix-download_firmware_validate-for-RTL881.patch
 	patches.suse/wifi-mac80211-fix-integer-overflow-in-hwmp_route_inf.patch
 	patches.suse/tcp-bring-back-NUMA-dispersion-in-inet_ehash_locks_a.patch
+	patches.suse/r8169-increase-max-jumbo-packet-size-on-RTL8125-RTL8.patch
 	patches.suse/cdc_ether-r8152-ThinkPad-Hybrid-USB-C-A-Dock-quirk.patch
 	patches.suse/ieee802154-ca8210-Use-proper-setters-and-getters-for.patch
 	patches.suse/igb-reject-invalid-external-timestamp-requests-for-8.patch
