soc: qcom: smem: fix hwspinlock resource leak in probe error paths (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35425,6 +35425,7 @@
 	patches.suse/soc-tegra-fuse-speedo-tegra210-Update-speedo-IDs.patch
 	patches.suse/firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 	patches.suse/soc-qcom-ocmem-fix-device-leak-on-lookup.patch
+	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
