--- a/series.conf
+++ b/series.conf
@@ -35426,6 +35426,7 @@
 	patches.suse/firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 	patches.suse/soc-qcom-ocmem-fix-device-leak-on-lookup.patch
 	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
+	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
