--- a/series.conf
+++ b/series.conf
@@ -35422,6 +35422,7 @@
 	patches.suse/PCI-dwc-Fix-wrong-PORT_LOGIC_LTSSM_STATE_MASK-defini.patch
 	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
 	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
+	patches.suse/soc-tegra-fuse-speedo-tegra210-Update-speedo-IDs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
