firmware: imx: scu-irq: fix OF node leak in (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35423,6 +35423,7 @@
 	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
 	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
 	patches.suse/soc-tegra-fuse-speedo-tegra210-Update-speedo-IDs.patch
+	patches.suse/firmware-imx-scu-irq-fix-OF-node-leak-in.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
