soc/tegra: fuse: Do not register SoC device on ACPI boot (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13783,6 +13783,7 @@
 	patches.suse/PCI-keystone-Exit-ks_pcie_probe-for-invalid-mode.patch
 	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
 	patches.suse/sysctl-fix-kernel-doc-format-warning.patch
+	patches.suse/soc-tegra-fuse-Do-not-register-SoC-device-on-ACPI-bo.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
