--- a/series.conf
+++ b/series.conf
@@ -13786,6 +13786,7 @@
 	patches.suse/soc-tegra-fuse-Do-not-register-SoC-device-on-ACPI-bo.patch
 	patches.suse/soc-tegra-fuse-speedo-tegra210-Update-speedo-IDs.patch
 	patches.suse/firmware-imx-scu-irq-fix-OF-node-leak-in.patch
+	patches.suse/firmware-qcom-tzmem-fix-qcom_tzmem_policy-kernel-doc.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
