--- a/series.conf
+++ b/series.conf
@@ -13789,6 +13789,7 @@
 	patches.suse/firmware-qcom-tzmem-fix-qcom_tzmem_policy-kernel-doc.patch
 	patches.suse/soc-qcom-ocmem-fix-device-leak-on-lookup.patch
 	patches.suse/soc-qcom-pbs-fix-device-leak-on-lookup.patch
+	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
