--- a/series.conf
+++ b/series.conf
@@ -13790,6 +13790,7 @@
 	patches.suse/soc-qcom-ocmem-fix-device-leak-on-lookup.patch
 	patches.suse/soc-qcom-pbs-fix-device-leak-on-lookup.patch
 	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
+	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
