--- a/series.conf
+++ b/series.conf
@@ -13784,6 +13784,7 @@
 	patches.suse/PCI-rcar-gen2-Drop-ARM-dependency-from-PCI_RCAR_GEN2.patch
 	patches.suse/sysctl-fix-kernel-doc-format-warning.patch
 	patches.suse/soc-tegra-fuse-Do-not-register-SoC-device-on-ACPI-bo.patch
+	patches.suse/soc-tegra-fuse-speedo-tegra210-Update-speedo-IDs.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
