--- a/series.conf
+++ b/series.conf
@@ -13792,6 +13792,7 @@
 	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 	patches.suse/soc-apple-mailbox-fix-device-leak-on-lookup.patch
+	patches.suse/soc-samsung-exynos-pmu-fix-device-leak-on-regmap-loo.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
