--- a/series.conf
+++ b/series.conf
@@ -35453,6 +35453,7 @@
 	patches.suse/comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_cancel.patch
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
+	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
