--- a/series.conf
+++ b/series.conf
@@ -35445,6 +35445,7 @@
 	patches.suse/firmware-stratix10-svc-Add-mutex-in-stratix10-memory.patch
 	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
 	patches.suse/iio-core-add-missing-mutex_destroy-in-iio_dev_releas.patch
+	patches.suse/iio-core-Clean-up-device-correctly-on-iio_device_all.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
