--- a/series.conf
+++ b/series.conf
@@ -35458,6 +35458,7 @@
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
+	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
