--- a/series.conf
+++ b/series.conf
@@ -35307,6 +35307,7 @@
 	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Nova-Lake-S.patch
 	patches.suse/usb-dwc3-pci-Sort-out-the-Intel-device-IDs.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
+	patches.suse/USB-serial-ftdi_sio-add-support-for-u-blox-EVK-M101.patch
 	patches.suse/xhci-dbgtty-fix-device-unregister.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
