--- a/series.conf
+++ b/series.conf
@@ -35456,6 +35456,7 @@
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 	patches.suse/usb-dwc2-fix-hang-during-suspend-if-set-as-periphera.patch
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
+	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
