--- a/series.conf
+++ b/series.conf
@@ -35441,6 +35441,7 @@
 	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
 	patches.suse/fbdev-pxafb-Fix-multiple-clamped-values-in-pxafb_adj.patch
 	patches.suse/fbdev-ssd1307fb-fix-potential-page-leak-in-ssd1307fb.patch
+	patches.suse/uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-to-uio_.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
