rpmsg: glink: fix rpmsg device leak (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35436,6 +35436,7 @@
 	patches.suse/soc-qcom-ocmem-fix-device-leak-on-lookup.patch
 	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
+	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
