iio: accel: bmc150: Fix irq assumption regression (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35323,6 +35323,7 @@
 	patches.suse/iio-accel-fix-ADXL355-startup-race-condition.patch
 	patches.suse/iio-imu-st_lsm6dsx-fix-array-size-for-st_lsm6dsx_set.patch
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
+	patches.suse/iio-accel-bmc150-Fix-irq-assumption-regression.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 	patches.suse/spi-bcm63xx-fix-premature-CS-deassertion-on-RX-only-.patch
 	patches.suse/spi-amlogic-spifc-a1-Handle-devm_pm_runtime_enable-e.patch
