--- a/series.conf
+++ b/series.conf
@@ -35440,6 +35440,7 @@
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
 	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
 	patches.suse/fbdev-pxafb-Fix-multiple-clamped-values-in-pxafb_adj.patch
+	patches.suse/fbdev-ssd1307fb-fix-potential-page-leak-in-ssd1307fb.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
