firmware: stratix10-svc: fix make htmldocs warning for stratix10_svc (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35446,6 +35446,7 @@
 	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
 	patches.suse/iio-core-add-missing-mutex_destroy-in-iio_dev_releas.patch
 	patches.suse/iio-core-Clean-up-device-correctly-on-iio_device_all.patch
+	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
