thunderbolt: Add support for Intel Wildcat Lake (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35301,6 +35301,7 @@
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 	patches.suse/mailbox-mailbox-test-Fix-debugfs_create_dir-error-ch.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
+	patches.suse/thunderbolt-Add-support-for-Intel-Wildcat-Lake.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
