--- a/series.conf
+++ b/series.conf
@@ -35447,6 +35447,7 @@
 	patches.suse/iio-core-add-missing-mutex_destroy-in-iio_dev_releas.patch
 	patches.suse/iio-core-Clean-up-device-correctly-on-iio_device_all.patch
 	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
+	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
