--- a/series.conf
+++ b/series.conf
@@ -35439,6 +35439,7 @@
 	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
 	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
+	patches.suse/fbdev-pxafb-Fix-multiple-clamped-values-in-pxafb_adj.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
