fbdev: tcx.c fix mem_map to correct smem_start offset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35438,6 +35438,7 @@
 	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
+	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
