usb: dwc2: fix hang during suspend if set as peripheral (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35454,6 +35454,7 @@
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
+	patches.suse/usb-dwc2-fix-hang-during-suspend-if-set-as-periphera.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
