comedi: multiq3: sanitize config options in multiq3_attach() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35449,6 +35449,7 @@
 	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
 	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
 	patches.suse/comedi-check-device-s-attached-status-in-compat-ioct.patch
+	patches.suse/comedi-multiq3-sanitize-config-options-in-multiq3_at.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
