--- a/series.conf
+++ b/series.conf
@@ -35437,6 +35437,7 @@
 	patches.suse/soc-qcom-smem-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
+	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
