--- a/series.conf
+++ b/series.conf
@@ -35284,6 +35284,7 @@
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 	patches.suse/Input-cros_ec_keyb-fix-an-invalid-memory-access.patch
+	patches.suse/ALSA-usb-audio-Add-DSD-quirk-for-LEAK-Stereo-230.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
