usb: storage: sddr55: Reject out-of-bound new_pba (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35309,6 +35309,7 @@
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-u-blox-EVK-M101.patch
 	patches.suse/USB-serial-option-add-support-for-Rolling-RW101R-GL.patch
+	patches.suse/usb-storage-sddr55-Reject-out-of-bound-new_pba.patch
 	patches.suse/xhci-dbgtty-fix-device-unregister.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
