staging: fbtft: core: fix potential memory leak in fbtft_probe_common() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35459,6 +35459,7 @@
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
+	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
