--- a/series.conf
+++ b/series.conf
@@ -35443,6 +35443,7 @@
 	patches.suse/fbdev-ssd1307fb-fix-potential-page-leak-in-ssd1307fb.patch
 	patches.suse/uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-to-uio_.patch
 	patches.suse/firmware-stratix10-svc-Add-mutex-in-stratix10-memory.patch
+	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
