--- a/series.conf
+++ b/series.conf
@@ -35444,6 +35444,7 @@
 	patches.suse/uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-to-uio_.patch
 	patches.suse/firmware-stratix10-svc-Add-mutex-in-stratix10-memory.patch
 	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
+	patches.suse/iio-core-add-missing-mutex_destroy-in-iio_dev_releas.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
