usb: phy: Initialize struct usb_phy list_head (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35455,6 +35455,7 @@
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 	patches.suse/usb-dwc2-fix-hang-during-suspend-if-set-as-periphera.patch
+	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
