--- a/series.conf
+++ b/series.conf
@@ -35304,6 +35304,7 @@
 	patches.suse/thunderbolt-Add-support-for-Intel-Wildcat-Lake.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
+	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Nova-Lake-S.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/xhci-dbgtty-fix-device-unregister.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
