drm/amd/display: Don't change brightness for disabled connectors (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56794,6 +56794,7 @@
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/drm-amd-amdgpu-reserve-vm-invalidation-engine-for-un.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
+	patches.suse/drm-amd-display-Don-t-change-brightness-for-disabled.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
 	patches.suse/drm-xe-Fix-conversion-from-clock-ticks-to-millisecon.patch
