--- a/series.conf
+++ b/series.conf
@@ -56792,6 +56792,7 @@
 	patches.suse/can-sja1000-fix-max-irq-loop-handling.patch
 	patches.suse/can-gs_usb-gs_usb_xmit_callback-fix-handling-of-fail.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
+	patches.suse/drm-amd-amdgpu-reserve-vm-invalidation-engine-for-un.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
