drm/i915/dp: Initialize the source OUI write timestamp always (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49597,6 +49597,7 @@
 	patches.suse/drm-mediatek-Fix-child-node-refcount-handling-in-ear.patch
 	patches.suse/drm-xe-hdcp-Fix-gsc-structure-check-in-fw-check-stat.patch
 	patches.suse/drm-i915-dsi-convert-to-struct-intel_display.patch
+	patches.suse/drm-i915-dp-Initialize-the-source-OUI-write-timestam.patch
 	patches.suse/drm-msm-dpu-cast-crtc_clk-calculation-to-u64-in-_dpu.patch
 	patches.suse/drm-amd-display-Reduce-HPD-Detection-Interval-for-IP.patch
 	patches.suse/drm-amd-display-Refactoring-if-and-endif-statements-.patch
