--- a/series.conf
+++ b/series.conf
@@ -13813,6 +13813,7 @@
 	patches.suse/fbdev-pxafb-Fix-multiple-clamped-values-in-pxafb_adj.patch
 	patches.suse/fbdev-ssd1307fb-fix-potential-page-leak-in-ssd1307fb.patch
 	patches.suse/uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-to-uio_.patch
+	patches.suse/firmware-stratix10-svc-Add-mutex-in-stratix10-memory.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
