usb: gadget: tegra-xudc: Always reinitialize data toggle when clear halt (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13835,6 +13835,7 @@
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
+	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
