--- a/series.conf
+++ b/series.conf
@@ -13823,6 +13823,7 @@
 	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
 	patches.suse/mei-gsc-add-dependency-on-Xe-driver.patch
 	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
+	patches.suse/comedi-check-device-s-attached-status-in-compat-ioct.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
