--- a/series.conf
+++ b/series.conf
@@ -13600,6 +13600,7 @@
 	patches.suse/can-gs_usb-gs_usb_receive_bulk_callback-check-actual.patch
 	patches.suse/can-gs_usb-gs_usb_receive_bulk_callback-check-actual-395d988.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
+	patches.suse/drm-amd-amdgpu-reserve-vm-invalidation-engine-for-un.patch
 	patches.suse/Revert-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.suse/drm-amdgpu-fix-cyan_skillfish2-gpu-info-fw-handling.patch
 	patches.suse/drm-sti-fix-device-leaks-at-component-probe.patch
