--- a/series.conf
+++ b/series.conf
@@ -13831,6 +13831,7 @@
 	patches.suse/usb-dwc3-dwc3_power_off_all_roothub_ports-Use-iorema.patch
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 	patches.suse/usb-dwc2-fix-hang-during-suspend-if-set-as-periphera.patch
+	patches.suse/usb-raw-gadget-cap-raw_io-transfer-length-to-KMALLOC.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
