thunderbolt: Add support for Intel Wildcat Lake (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13612,6 +13612,7 @@
 	patches.suse/mailbox-mtk-cmdq-Refine-DMA-address-handling-for-the.patch
 	patches.suse/usb-renesas_usbhs-Fix-synchronous-external-abort-on-.patch
 	patches.suse/usb-cdns3-Fix-double-resource-release-in-cdns3_pci_p.patch
+	patches.suse/thunderbolt-Add-support-for-Intel-Wildcat-Lake.patch
 	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
