--- a/series.conf
+++ b/series.conf
@@ -13810,6 +13810,7 @@
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
 	patches.suse/watchdog-starfive-Fix-resource-leak-in-probe-error-p.patch
 	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
+	patches.suse/fbdev-pxafb-Fix-multiple-clamped-values-in-pxafb_adj.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
