staging: fbtft: core: fix potential memory leak in fbtft_probe_common() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13836,6 +13836,7 @@
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
+	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
