--- a/series.conf
+++ b/series.conf
@@ -13814,6 +13814,7 @@
 	patches.suse/fbdev-ssd1307fb-fix-potential-page-leak-in-ssd1307fb.patch
 	patches.suse/uio-uio_fsl_elbc_gpcm-Add-null-pointer-check-to-uio_.patch
 	patches.suse/firmware-stratix10-svc-Add-mutex-in-stratix10-memory.patch
+	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
