interconnect: qcom: sdx75: Drop QPIC interconnect and BCM nodes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13819,6 +13819,7 @@
 	patches.suse/iio-core-Clean-up-device-correctly-on-iio_device_all.patch
 	patches.suse/interconnect-debugfs-Fix-incorrect-error-handling-fo.patch
 	patches.suse/interconnect-qcom-msm8996-add-missing-link-to-SLAVE_.patch
+	patches.suse/interconnect-qcom-sdx75-Drop-QPIC-interconnect-and-B.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
