USB: Fix descriptor count when handling invalid MBIM extended descriptor (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13827,6 +13827,7 @@
 	patches.suse/comedi-multiq3-sanitize-config-options-in-multiq3_at.patch
 	patches.suse/comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_cancel.patch
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
+	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
