--- a/series.conf
+++ b/series.conf
@@ -13822,6 +13822,7 @@
 	patches.suse/interconnect-qcom-sdx75-Drop-QPIC-interconnect-and-B.patch
 	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
 	patches.suse/mei-gsc-add-dependency-on-Xe-driver.patch
+	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
