--- a/series.conf
+++ b/series.conf
@@ -13834,6 +13834,7 @@
 	patches.suse/usb-raw-gadget-cap-raw_io-transfer-length-to-KMALLOC.patch
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
+	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
