--- a/series.conf
+++ b/series.conf
@@ -13806,6 +13806,7 @@
 	patches.suse/soc-amlogic-canvas-fix-device-leak-on-lookup.patch
 	patches.suse/soc-apple-mailbox-fix-device-leak-on-lookup.patch
 	patches.suse/soc-samsung-exynos-pmu-fix-device-leak-on-regmap-loo.patch
+	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
