--- a/series.conf
+++ b/series.conf
@@ -13817,6 +13817,7 @@
 	patches.suse/iio-imu-st_lsm6dsx-Fix-measurement-unit-for-odr-stru.patch
 	patches.suse/iio-core-add-missing-mutex_destroy-in-iio_dev_releas.patch
 	patches.suse/iio-core-Clean-up-device-correctly-on-iio_device_all.patch
+	patches.suse/interconnect-debugfs-Fix-incorrect-error-handling-fo.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
