watchdog: starfive: Fix resource leak in probe error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13808,6 +13808,7 @@
 	patches.suse/soc-samsung-exynos-pmu-fix-device-leak-on-regmap-loo.patch
 	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
+	patches.suse/watchdog-starfive-Fix-resource-leak-in-probe-error-p.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
