iio: accel: bmc150: Fix irq assumption regression (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13639,6 +13639,7 @@
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-temperature-and-h.patch
 	patches.suse/iio-humditiy-hdc3020-fix-units-for-thresholds-and-hy.patch
 	patches.suse/iio-st_lsm6dsx-Fixed-calibrated-timestamp-calculatio.patch
+	patches.suse/iio-accel-bmc150-Fix-irq-assumption-regression.patch
 	patches.suse/firmware-stratix10-svc-fix-bug-in-saving-controller-.patch
 	patches.suse/regulator-rtq2208-Correct-buck-group2-phase-mapping-.patch
 	patches.suse/regulator-rtq2208-Correct-LDO2-logic-judgment-bits.patch
