--- a/series.conf
+++ b/series.conf
@@ -13829,6 +13829,7 @@
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 	patches.suse/usb-dwc3-dwc3_power_off_all_roothub_ports-Use-iorema.patch
+	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
