--- a/series.conf
+++ b/series.conf
@@ -13828,6 +13828,7 @@
 	patches.suse/comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_cancel.patch
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
+	patches.suse/usb-dwc3-dwc3_power_off_all_roothub_ports-Use-iorema.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
