--- a/series.conf
+++ b/series.conf
@@ -13616,6 +13616,7 @@
 	patches.suse/xhci-fix-stale-flag-preventig-URBs-after-link-state-.patch
 	patches.suse/usb-storage-Fix-memory-leak-in-USB-bulk-transport.patch
 	patches.suse/drivers-usb-dwc3-fix-PCI-parent-check.patch
+	patches.suse/usb-dwc3-pci-add-support-for-the-Intel-Nova-Lake-S.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/usb-typec-ucsi-psy-Set-max-current-to-zero-when-disc.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
