comedi: multiq3: sanitize config options in multiq3_attach() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13824,6 +13824,7 @@
 	patches.suse/mei-gsc-add-dependency-on-Xe-driver.patch
 	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
 	patches.suse/comedi-check-device-s-attached-status-in-compat-ioct.patch
+	patches.suse/comedi-multiq3-sanitize-config-options-in-multiq3_at.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
