--- a/series.conf
+++ b/series.conf
@@ -13820,6 +13820,7 @@
 	patches.suse/interconnect-debugfs-Fix-incorrect-error-handling-fo.patch
 	patches.suse/interconnect-qcom-msm8996-add-missing-link-to-SLAVE_.patch
 	patches.suse/interconnect-qcom-sdx75-Drop-QPIC-interconnect-and-B.patch
+	patches.suse/firmware-stratix10-svc-fix-make-htmldocs-warning-for.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
