--- a/series.conf
+++ b/series.conf
@@ -13825,6 +13825,7 @@
 	patches.suse/comedi-c6xdigio-Fix-invalid-PNP-driver-unregistratio.patch
 	patches.suse/comedi-check-device-s-attached-status-in-compat-ioct.patch
 	patches.suse/comedi-multiq3-sanitize-config-options-in-multiq3_at.patch
+	patches.suse/comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_cancel.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
