USB: serial: ftdi_sio: add support for u-blox EVK-M101 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13620,6 +13620,7 @@
 	patches.suse/usb-dwc3-pci-Sort-out-the-Intel-device-IDs.patch
 	patches.suse/usb-gadget-f_eem-Fix-memory-leak-in-eem_unwrap.patch
 	patches.suse/usb-typec-ucsi-psy-Set-max-current-to-zero-when-disc.patch
+	patches.suse/USB-serial-ftdi_sio-add-support-for-u-blox-EVK-M101.patch
 	patches.suse/usb-dwc3-Fix-race-condition-between-concurrent-dwc3_.patch
 	patches.suse/usb-uas-fix-urb-unmapping-issue-when-the-uas-device-.patch
 	patches.suse/USB-storage-Remove-subclass-and-protocol-overrides-f.patch
