--- a/series.conf
+++ b/series.conf
@@ -13809,6 +13809,7 @@
 	patches.suse/rpmsg-glink-fix-rpmsg-device-leak.patch
 	patches.suse/watchdog-wdat_wdt-Fix-ACPI-table-leak-in-probe-funct.patch
 	patches.suse/watchdog-starfive-Fix-resource-leak-in-probe-error-p.patch
+	patches.suse/fbdev-tcx.c-fix-mem_map-to-correct-smem_start-offset.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
