--- a/blacklist.conf
+++ b/blacklist.conf
@@ -32,3 +32,4 @@ aa5fc4362fac9351557eb27c745579159a2e4520 # build failure
 32f072d9eaf9c31c2b0527a4a3370570a731e3cc # just formating
 118800b0797a046adaa2a8e9dee9b971b78802a7 # conflicts
 f1fdffe0afea02ba783acfe815b6a60e7180df40 # conflicts
+a89103f67112453fa36c9513e951c19eed9d2d92 # conflicts
