--- a/series.conf
+++ b/series.conf
@@ -35464,6 +35464,7 @@
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
 	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
+	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
