--- a/series.conf
+++ b/series.conf
@@ -35460,6 +35460,7 @@
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
+	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
