clk: qcom: camcc-sm6350: Specify Titan GDSC power domain as a parent to other (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35462,6 +35462,7 @@
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
+	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
