--- a/series.conf
+++ b/series.conf
@@ -35463,6 +35463,7 @@
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
+	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
