clk: renesas: r9a06g032: Fix memory leak in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35461,6 +35461,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
+	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
