--- a/series.conf
+++ b/series.conf
@@ -56989,6 +56989,7 @@
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
+	patches.suse/i3c-fix-refcount-inconsistency-in-i3c_master_registe.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
