--- a/series.conf
+++ b/series.conf
@@ -13839,6 +13839,7 @@
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
+	patches.suse/clk-samsung-exynos-clkout-Assign-.num-before-accessi.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
