i3c: master: svc: Prevent incomplete IBI transaction (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13846,6 +13846,7 @@
 	patches.suse/clk-qcom-camcc-sm7150-Fix-PLL-config-of-PLL2.patch
 	patches.suse/clk-qcom-Mark-camcc_sm7150_hws-static.patch
 	patches.suse/i3c-fix-refcount-inconsistency-in-i3c_master_registe.patch
+	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
