clk: renesas: r9a06g032: Fix memory leak in error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13838,6 +13838,7 @@
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
+	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
