clk: qcom: camcc-sm6350: Fix PLL config of PLL2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13842,6 +13842,7 @@
 	patches.suse/clk-samsung-exynos-clkout-Assign-.num-before-accessi.patch
 	patches.suse/clk-qcom-camcc-sm8550-Specify-Titan-GDSC-power-domai.patch
 	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
+	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
