clk: qcom: camcc-sm6350: Specify Titan GDSC power domain as a parent to other (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13841,6 +13841,7 @@
 	patches.suse/clk-renesas-r9a06g032-Fix-memory-leak-in-error-path.patch
 	patches.suse/clk-samsung-exynos-clkout-Assign-.num-before-accessi.patch
 	patches.suse/clk-qcom-camcc-sm8550-Specify-Titan-GDSC-power-domai.patch
+	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
