--- a/series.conf
+++ b/series.conf
@@ -13844,6 +13844,7 @@
 	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
 	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 	patches.suse/clk-qcom-camcc-sm7150-Fix-PLL-config-of-PLL2.patch
+	patches.suse/clk-qcom-Mark-camcc_sm7150_hws-static.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
